--- a/Resources/Templates/login.html
+++ b/Resources/Templates/login.html
@@ -74,7 +74,7 @@
                     </button>
                 </div>
                 <div class="text-center">
-                    <a href="#" class="small">¿Olvidaste tu contraseña?</a>
+                    <a href="#" class="small">¿Ya tienes una cuenta?</a>
                 </div>
             </form>
         </div>
