RF6-Detalles de una rutina

--- a/Resources/Templates/rutinas.html
+++ b/Resources/Templates/rutinas.html
@@ -73,7 +73,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">Rutina enfocada en fuerza para bíceps y tríceps.</p>
-                        <a href="/Resources/Templates/rutina-detalle.html?id=brazos" class="btn btn-outline-success mt-2">Ver detalles</a>
+                        <a href="/Resources/Templates/detallesRutina.html" class="btn btn-outline-success mt-2">Ver detalles</a>
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item"><strong>Categoría:</strong> Fuerza</li>
@@ -90,7 +90,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">Entrenamiento de intervalos de alta intensidad para quemar calorías.</p>
-                        <a href="/Resources/Templates/rutina-detalle.html?id=cardio" class="btn btn-outline-warning mt-2">Ver detalles</a>
+                        <a href="/Resources/Templates/detallesRutina.html" class="btn btn-outline-warning mt-2">Ver detalles</a>
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item"><strong>Categoría:</strong> Cardio</li>
@@ -107,7 +107,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">Secuencia de yoga para mejorar la movilidad y flexibilidad.</p>
-                        <a href="/Resources/Templates/rutina-detalle.html?id=yoga" class="btn btn-outline-info mt-2">Ver detalles</a>
+                        <a href="/Resources/Templates/detallesRutina.html" class="btn btn-outline-info mt-2">Ver detalles</a>
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item"><strong>Categoría:</strong> Flexibilidad</li>
