--- a/Resources/Templates/login.html
+++ b/Resources/Templates/login.html
@@ -69,12 +69,12 @@
                     </div>
                 </div>
                 <div class="d-grid mb-2">
-                    <button type="submit" class="btn btn-primary">
-                        <i class="bi bi-box-arrow-in-right"></i> Iniciar Sesión
-                    </button>
+                    <a href="/Resources/Templates/usuario/perfil.html" class="btn btn-primary d-flex align-items-center justify-content-center">
+                        <i class="bi bi-box-arrow-in-right me-2"></i> Iniciar Sesión
+                    </a>
                 </div>
                 <div class="text-center">
-                    <a href="#" class="small">¿Olvidaste tu contraseña?</a>
+                    <a href="/Resources/Templates/admin/ejercicios.html" class="small">¿Olvidaste tu contraseña?</a>
                 </div>
             </form>
         </div>
