Enlace erroneo critico no permitia acceder a admin

--- a/Resources/Templates/login.html
+++ b/Resources/Templates/login.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="text-center">
                     <a href="#" class="small">¿Ya tienes una cuenta?</a>
-                    <a href="/Resources/Templates/admin/ejercicios.html" class="small">¿Olvidaste tu contraseña?</a>
+                    <a href="/Resources/Templates/admin/ejercicios.html" class="small">Ir a administrador</a>
                 </div>
             </form>
         </div>
