--- a/Resources/Templates/detallesRutina.html
+++ b/Resources/Templates/detallesRutina.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link custom-hover" aria-current="page" href="/Resources/Templates/inicio.html">
+                        <a class="nav-link custom-hover" aria-current="page" href="/site/inicio.html">
                             <i class="bi bi-house-door-fill"></i> Inicio
                         </a>
                     </li>
