--- a/Resources/Templates/login.html
+++ b/Resources/Templates/login.html
@@ -26,7 +26,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link custom-hover" aria-current="page"
-                            href="/Resources/Templates/inicio.html">
+                            href="/site/inicio.html">
                             <i class="bi bi-house-door-fill"></i> Inicio
                         </a>
                     </li>
